# longmi

./: .gitignore  CITATION.cff  LICENSE  README.md  REFERENCES.md  RELEASE_NOTES.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md  project-status.md  references.md
docs/algorithms/: bernoulli_glmm.md  joint_gaussian_imputer.md  negative_binomial_glmm.md  posterior_predictive_mi.md  rubin_pooling.md
docs/examples/: cats_tutorial_validation.md  epilepsy_counts.md
docs/explanation/: mcar_mar_mnar.md  why_impute_the_response.md
docs/getting_started/: preparing_data.md  quickstart.md  understanding_the_output.md
docs/how_to/: choose_an_imputer.md  interpret_diagnostics.md  report_an_analysis.md  run_delta_sensitivity.md
docs/theory/: assumptions.md  gee_after_imputation.md  mathematical_foundations.md
examples/cats_tutorial_parity/: README.md  external_repo.py
examples/epil_count/: README.md  compare_results.py  comparison_table.csv  delta_response.csv  epil_provenance.json  missingness.py  prepare_data.py  results_python.csv  results_r.csv  results_r_mi.csv  run_mi_reference.R  run_python.py  run_reference.R
src/longmi/: __init__.py  contracts.py  data.py  results.py  scenarios.py
src/longmi/analysis/: __init__.py  adapters.py  base.py
src/longmi/diagnostics/: __init__.py  fits.py
src/longmi/impute/: __init__.py  _glmm.py  base.py  bernoulli.py  gaussian.py  negbin.py
src/longmi/pooling/: __init__.py  rubin.py
tests/cross_language/: test_rubin_r_parity.py
tests/fixtures/: README.md  simulated_longitudinal_count.csv
tests/simulation/: README.md  harness.py  test_bernoulli_coverage.py  test_delta_response.py  test_expected_failures.py  test_gaussian_coverage.py  test_negbin_coverage.py
tests/unit/: nb_refactor_golden.json  test_bernoulli_imputer.py  test_binary_data.py  test_fit_objects.py  test_gaussian_imputer.py  test_glmm_refactor_regression.py  test_longitudinal_data.py  test_negbin_imputer.py  test_quickstart_example.py  test_rubin_pooling.py  test_statsmodels_gee.py  test_statsmodels_glm.py
validation/: external_repositories.toml
validation/binary/: compare.py  comparison.csv  make_shared_data.py  results_longmi.csv  results_mice.csv  run_longmi.py  run_mice.R  shared_binary.csv
validation/masks/: epil_mar_seed_20260723.csv  epil_mcar_light_seed_20260723.csv  epil_mnar_stress_seed_20260723.csv
validation/r/: rubin_reference.R  rubin_reference.csv
validation/releases/0.1.0a1/: environment_python.txt  seeds.json  session_info_r.txt  simulation_output.txt  simulation_plan.md  (+3 more)
validation/schemas/: epil_results.schema.json
