[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "longmi"
version = "0.2.0a1.dev0"
description = "Multiple imputation for incomplete longitudinal outcomes with explicit validity conditions"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aaron Danielson", email = "aaronjdanielson@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/aaronjdanielson/longmi"
Repository = "https://github.com/aaronjdanielson/longmi"
Documentation = "https://aaronjdanielson.github.io/longmi/"
Issues = "https://github.com/aaronjdanielson/longmi/issues"
Changelog = "https://github.com/aaronjdanielson/longmi/blob/main/RELEASE_NOTES.md"

[project.optional-dependencies]
analysis = ["statsmodels>=0.14"]
dev = ["pytest>=7.0", "statsmodels>=0.14"]
docs = ["mkdocs>=1.5", "pymdown-extensions>=10.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/longmi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: simulation studies; run explicitly with `pytest -m slow tests/simulation`",
]
